spec/conformance/invalid/duplicate-id.ontos
@ontos 1.0
@title Duplicate ID example

- First node @id(shared-id)
  purpose: First node with shared ID.

- Second node @id(shared-id)
  purpose: Second node with same ID.

